# ISEAHackathon

./: Cargo.toml  README.md  bn254_ps.rs  cli.js  credential_machine.rs  index.node  issuer.js  machine.rs  main.rs  mod.rs  package-lock.json  package.json  ps_dob.rs  ps_nat.rs  ps_rand.rs  wallet.js  wallet_core.rs
js/: bn254.js  demo.js  demo_bridge.js  ps_crypto.js  wallet.js  wallet_bridge.js
src/: bn254_ps.rs  wallet_core.rs
src/circuits/: mod.rs  ps_dob.rs  ps_nat.rs
