[package]
name    = "zkp-wallet-rs"
version = "0.1.0"
edition = "2021"

[lib]
name          = "zkp_wallet_rs"
crate-type    = ["cdylib"]   # required for neon native addon

[dependencies]
# Neon — Node.js ↔ Rust bridge
neon = { version = "1.0", default-features = false, features = ["napi-6"] }

# Elliptic curve — BN254 (ark-bn254)
ark-bn254  = "0.4"
ark-ec     = { version = "0.4", features = ["parallel"] }
ark-ff     = { version = "0.4", features = ["parallel"] }
ark-std    = "0.4"

# Pointcheval-Sanders helpers
ark-serialize = "0.4"

# Randomness
rand = "0.8"

# SHA-256 for Fiat-Shamir
sha2 = "0.10"

# Serialisation for JS ↔ Rust data exchange
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bincode = { package = "cu-bincode", version = "2.0" }

# Hex encoding
hex = "0.4"
bellpepper = "0.4.1"
bellpepper-core = "0.4.0"
ff = "0.13.1"

arecibo = { version = "0.1.1" }
anyhow = "1.0.102"

[profile.release]
lto           = true
codegen-units = 1
opt-level     = 3
